--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -114,6 +114,12 @@ td > input, td > input:focus {
     margin: 10px auto;
 }
 
+.hiddenfile {
+    width: 0px;
+    height: 0px;
+    overflow: hidden;
+}
+
 button {
     background-color: #0070FF;
     border: none;
@@ -135,6 +141,10 @@ button:focus {
 
 span.checkbox {
     font-size: 15px;
-    float: right;
+    
     padding: 3px
+}
+
+span.floatright {
+    float: right;
 }
